feat: allow profile and password updates
